Fix styling for persistent player on small screens

--- a/app/assets/stylesheets/persistent_player.scss
+++ b/app/assets/stylesheets/persistent_player.scss
@@ -9,7 +9,6 @@
 
   /* @extend .navbar; */
   /* @extend .navbar-inverse; */
-  @extend .list-inline;
   background: linear-gradient(rgb(56, 56, 56), rgb(36, 36, 36));
   border-radius: 3px 3px 0 0;
 
@@ -33,8 +32,6 @@
   .left-controls, .right-controls {
     list-style: none;
     padding-left: 3px;
-    @extend .clearfix;
-    @extend .navbar-nav;
 
     .pause-btn {
       display: none;
@@ -43,6 +40,7 @@
     li {
       position: relative;
       display: block;
+      float: left;
 
       a {
         position: relative;
